--- a/.github/workflows/luci-app-passwall CI.yml
+++ b/.github/workflows/luci-app-passwall CI.yml
@@ -2,9 +2,9 @@ name: luci-app-passwall CI
 on:
   release:
     types: [published]
-  push:
-    branches:
-      - master
+  #push:
+    #branches:
+      #- master
     paths:
       - 'Makefile'
 jobs:
